Add Connection management for OAuth providers with REST endpoints