@@ -13,7 +13,6 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.data.mongo.DataMongoTest;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
@@ -65,7 +64,8 @@ class ConsentControllerIntegrationTest {
             Collections.singletonList("ROLE_USER"),
             Collections.emptyList(),
             Collections.emptyList(),
-            new ArrayList<>(List.of(testConsent)));
+            new ArrayList<>(List.of(testConsent)),
+            Collections.emptyList());
 
     userService.saveUser(testUser);
   }
